# proj-template

./: .gitignore  CHANGELOG.md  COPYING  README.md  config_example.yml  setup.cfg  setup.py
proj_template/: __init__.py  __main__.py  _setup.cfg.in  proj_template.py
proj_template/templates/: _gitignore.in  _init.py.in  _main.py.in  _setup.cfg.in  _setup.py.in
proj_template/templates/licenses/: BSD-3-Clause.in  MIT.in  licenses.yml
pyproject/: __init__.py  __main__.py  _setup.cfg.in  pyproject.py
