[build-system]
requires =
  "setuptools >= 50.0.0"
  "wheel"
build-backend = "setuptools.build_meta"

[metadata]
name = pyproject
version = file: version.txt
author = Rafael Guterres Jeffman
author-email = rafasgj@gmail.com
home-page = https://github.com/rafasgj/pyproject
description = Create a minimal Python project directory.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = ['CLI', 'Development Tool']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/rafasgj/pyproject_demo/issues
    Changelog = https://github.com/rafasgj/pyproject_demo/blob/master/CHANGELOG.md

[options]
install_requires =
    pyyaml >= 5.3.0

[options.entry_points]
console_scripts =
    pyproject = pyproject.__main__:main

[flake8]
max-line-length = 80
doctests = True
max-complexity = 10
exclude =
    .tox,
    .venv,
    .git,
    .eggs,
    __pycache__,
    docs,
    build,
    dist

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore =

[pylint]
max-nested-blocks = 5
ignored-modules = behave
max-line-length = 80
load-plugins = pylint.extensions.mccabe
