[build-system]
requires =
  "setuptools >= 50.0.0"
  "wheel"
build-backend = "setuptools.build_meta"

[metadata]
name = proj-template
version = attr: proj_template.__version__
author = Rafael Guterres Jeffman
author-email = rafasgj@gmail.com
home-page = https://github.com/rafasgj/proj-template
description = Create a minimal Python project directory.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = ['CLI', 'Development Tool']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/rafasgj/proj-template/issues
    Changelog = https://github.com/rafasgj/proj-template/blob/master/CHANGELOG.md

[options]
include_package_data = true
packages = find:
install_requires =
    pyyaml >= 5.3.0
    setuptools >= 50.0.0

[options.entry_points]
console_scripts =
    proj_template = proj_template.__main__:main

[options.package_data]
proj_template = templates/*, templates/*/*

[flake8]
max-line-length = 80
doctests = True
max-complexity = 10
exclude =
    .tox,
    .venv,
    .git,
    .eggs,
    __pycache__,
    docs,
    build,
    dist

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore =

[pylint]
max-nested-blocks = 5
ignored-modules = behave
max-line-length = 80
load-plugins = pylint.extensions.mccabe

[behave]
stop = true
stdout_capture = true
junit = false
